--- a/src/styles.less
+++ b/src/styles.less
@@ -110,10 +110,20 @@ aside > * {
 
 .content__title {
   //font-size: 30px;
+  padding: 10px;
   display: grid;
-  justify-content: center; /* align horizontal */
-  align-items: center; /* align vertical */
+  grid-template-columns: 1fr;
+  justify-content: center;
+  align-items: center;
   background-color: var(--tui-success-bg-night-hover);
+}
+
+.title-header-with-logo {
+  padding: 10px;
+  display: flex;
+  justify-self: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .content__title_description {
@@ -296,6 +306,7 @@ aside > * {
   .two_col_container_tournament {
     grid-template-columns: auto;
   }
+
   .two_col_container_match {
     grid-template-columns: auto;
   }
