--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -47,7 +47,17 @@
             </div>
           }
         }
-        <div class="lower-area" style="color: #232323"></div>
+
+        <div class="lower-area" style="color: #232323">
+          <!--          trext-->
+          <!--          @if (selectedPlayerInMatchLower$ | async; as player) {-->
+          <!--            ttt-->
+          <!--            {{ player.person?.first_name }}-->
+          <app-player-match-lower-display-flat
+
+          ></app-player-match-lower-display-flat>
+          <!--          }-->
+        </div>
 
         <div class="scoreboard-area">
           <app-scoreboard-display-flat
