--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
@@ -35,6 +35,27 @@
         (click)="toggleShowAwayDefenseRosterVisibility(data.scoreboard_data!)"
       ></app-admin-down-button>
     </div>
+
+    <div class="roster-forms-btns">
+      <app-admin-down-button
+        [down]="data.scoreboard_data?.is_match_player_lower ? 'Hide' : 'Show'"
+        [distance]="'PLAYER LOWER'"
+        (click)="toggleShowMatchPlayerLowerVisibility(data.scoreboard_data!)"
+      ></app-admin-down-button>
+    </div>
+
+    <div class="team-players-select">
+      <app-select-player-lower
+        [matchPlayers]="(homePlayersInMatch$ | async) || []"
+      ></app-select-player-lower>
+    </div>
+
+    <div class="team-players-select">
+      <app-select-player-lower
+        [matchPlayers]="(awayPlayersInMatch$ | async) || []"
+      ></app-select-player-lower>
+    </div>
+
   </div>
   <app-toggle-visible-button
     [isVisible$]="rosterFormsVisible$"
