match player lower integration

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -49,14 +49,12 @@
         }
 
         <div class="lower-area" style="color: #232323">
-          <!--          trext-->
-          <!--          @if (selectedPlayerInMatchLower$ | async; as player) {-->
-          <!--            ttt-->
-          <!--            {{ player.person?.first_name }}-->
-          <app-player-match-lower-display-flat
+          @if (data.scoreboard_data?.is_match_player_lower || false) {
+            <app-player-match-lower-display-flat
+              [playerId]="data.scoreboard_data?.player_match_lower_id"
+            ></app-player-match-lower-display-flat>
+          }
 
-          ></app-player-match-lower-display-flat>
-          <!--          }-->
         </div>
 
         <div class="scoreboard-area">
