--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
@@ -46,12 +46,14 @@
 
     <div class="team-players-select">
       <app-select-player-lower
+        [scoreboardId]="data.scoreboard_data?.id"
         [matchPlayers]="(homePlayersInMatch$ | async) || []"
       ></app-select-player-lower>
     </div>
 
     <div class="team-players-select">
       <app-select-player-lower
+        [scoreboardId]="data.scoreboard_data?.id"
         [matchPlayers]="(awayPlayersInMatch$ | async) || []"
       ></app-select-player-lower>
     </div>
