--- a/src/app/shared/scoreboards/player-match-lower-display-flat/player-match-lower-display-flat.component.html
+++ b/src/app/shared/scoreboards/player-match-lower-display-flat/player-match-lower-display-flat.component.html
@@ -1,7 +1,5 @@
-text
-
 @if (player$ | async; as player) {
-  <!-- Player Roster Card -->
+  <!-- Player Match Lower -->
   <div class="start-roster-card">
     <div class="start-roster-card-photo">
       <tui-avatar
