match player lower integration

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -46,13 +46,19 @@
               ></app-football-start-roster-display>
             </div>
           }
+          <!--          @if (awayDefenseRosterVisibility === 'invisible') {-->
+            <!--            <div class="roster-area"></div>-->
+            <!--          }-->
         }
 
         <div class="lower-area" style="color: #232323">
           @if (data.scoreboard_data?.is_match_player_lower || false) {
-            <app-player-match-lower-display-flat
-              [playerId]="data.scoreboard_data?.player_match_lower_id"
-            ></app-player-match-lower-display-flat>
+            <div class="lower-home">
+              <app-player-match-lower-display-flat
+                [teamColor]="data.scoreboard_data?.team_a_game_color"
+                [playerId]="data.scoreboard_data?.player_match_lower_id"
+              ></app-player-match-lower-display-flat>
+            </div>
           }
 
         </div>
