--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.less
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.less
@@ -16,13 +16,20 @@
 .roster-area {
   grid-area: roster;
   position: sticky;
-  top: 50px;
+  top: 20px;
 }
 
 .lower-area {
+  display: grid;
   grid-area: lower;
   position: sticky;
-  top: 780px;
+  top: 715px;
+}
+
+.lower-home {
+  //grid-area: lower-home;
+  position: relative;
+  right: 416px;
 }
 
 .scoreboard-area {
