--- a/src/app/shared/scoreboards/player-match-lower-display-flat/player-match-lower-display-flat.component.html
+++ b/src/app/shared/scoreboards/player-match-lower-display-flat/player-match-lower-display-flat.component.html
@@ -1,24 +1,24 @@
 @if (player$ | async; as player) {
   <!-- Player Match Lower -->
-  <div class="start-roster-card">
-    <div class="start-roster-card-photo">
+  <div class="player-match" [style.background-color]="teamColor">
+    <div class="player-match-photo">
       <tui-avatar
         size="xl"
         [text]="player.person?.first_name + ' ' + player.person?.second_name"
-        class="player-roster-card-avatar"
+        class="player-match-avatar"
         [rounded]="false"
         [avatarUrl]="backendUrl + player.person?.person_photo_web_url"
         (error)="onImgError($event)"
       ></tui-avatar>
-      <span class="start-roster-card-number">
+      <span class="player-match-number">
         {{ player.match_player.match_number }}
       </span>
     </div>
-    <div class="start-roster-card-name">
+    <div class="player-match-name">
       <span>{{ player.person?.first_name | uppercase }}</span>
       <span>{{ player.person?.second_name | uppercase }}</span>
     </div>
-    <div class="start-roster-card-position">
+    <div class="player-match-position">
       {{ player.position?.title }}
     </div>
   </div>
