match player lower integration

--- a/src/app/shared/scoreboards/player-match-lower-display-flat/player-match-lower-display-flat.component.html
+++ b/src/app/shared/scoreboards/player-match-lower-display-flat/player-match-lower-display-flat.component.html
@@ -6,7 +6,7 @@
         size="xl"
         class="player-match-avatar"
         [rounded]="false"
-        [avatarUrl]="backendUrl + player.person?.person_photo_web_url"
+        [avatarUrl]="backendUrl + player.person?.person_photo_icon_url"
         (error)="onImgError($event)"
       ></tui-avatar>
       <span class="player-match-number">
