--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.less
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.less
@@ -4,7 +4,7 @@
   grid-template-rows: auto auto auto auto;
   grid-template-areas:
    "roster"
-   "lower"
+   //"lower"
    "scoreboard"
    "sponsorLine";
   height: 1060px;
@@ -26,11 +26,11 @@
   top: 715px;
 }
 
-.lower-home {
-  //grid-area: lower-home;
-  position: relative;
-  right: 416px;
-}
+//.lower-home {
+//  //grid-area: lower-home;
+//  position: relative;
+//  right: 416px;
+//}
 
 .scoreboard-area {
   grid-area: scoreboard;
