--- a/src/app/shared/scoreboards/player-match-lower-display-flat/player-match-lower-display-flat.component.less
+++ b/src/app/shared/scoreboards/player-match-lower-display-flat/player-match-lower-display-flat.component.less
@@ -68,6 +68,7 @@
   padding: 0.5rem 0.5rem;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-shadow: 0 0 0 rgba(0, 0, 0, 0);
   justify-self: end;
   align-self: end;
   grid-column-start: 2;
