--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.less
@@ -1,6 +1,6 @@
 .roster-forms {
   display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto auto;
   grid-template-columns: auto auto;
   padding: 10px;
   grid-gap: 10px;
@@ -9,8 +9,33 @@
   justify-content: stretch;
 }
 
+.lower-btn-show {
+  display: grid;
+  grid-template-columns: 1fr 80%;
+  justify-content: center;
+  grid-gap: 10px;
+  grid-column: span 2;
+}
+
+
 @media screen and (max-width: 720px) {
   .roster-forms {
     grid-template-columns: auto;
   }
+}
+
+@keyframes blink {
+  0% {
+    background-color: #ffffff; /* or transparent; if you want no color */
+  }
+  50% {
+    background-color: #8f1c1c; /* your blinking color */
+  }
+  100% {
+    background-color: #ffffff; /* or transparent; to restore original color */
+  }
+}
+
+.blinking {
+  animation: blink 2s ease-in-out infinite;
 }
