--- a/src/app/shared/ui/select/select-player-lower/select-player-lower.component.html
+++ b/src/app/shared/ui/select/select-player-lower/select-player-lower.component.html
@@ -1,29 +1,37 @@
 @if (matchPlayers; as players) {
   @if (players.length > 0) {
-    @for (p of players; track $index) {
-    }
-    <tui-select
-      [tuiDropdownLimitWidth]="'min'"
-      style="padding-top: 10px"
-      [formControl]="control"
+    <!--    @for (p of players; track $index) {-->
+    <!--    }-->
+    <div
+      style="padding: 10px"
     >
-      <tui-data-list *tuiDataList>
-        @for (playerInMatch of players;
-          track playerInMatch.match_player?.id) {
-          <button
-            tuiOption
-            [value]="playerInMatch"
-            (click)="
+      <tui-select
+        [tuiDropdownLimitWidth]="'min'"
+        style="padding-top: 10px"
+        [formControl]="control"
+        [class]="{'highlighted-selector': isSelectedPlayerInMatch(selectedPlayer?.match_player?.id)}"
+      >
+        <tui-data-list *tuiDataList>
+          @for (playerInMatch of players;
+            track playerInMatch.match_player?.id) {
+
+            <button
+              tuiOption
+              [class]="{'highlighted-option': playerInMatch.match_player.id! === selectedPlayer?.match_player?.id}"
+              [value]="playerInMatch"
+              (click)="
               onSelect(playerInMatch)
             "
-          >
-            <b>{{ playerInMatch.match_player.match_number }}</b> &nbsp;
-            {{ playerInMatch.person?.second_name | titlecase }}
-            {{ playerInMatch.person?.first_name | titlecase }}
-          </button>
-        }
-      </tui-data-list>
-    </tui-select>
+            >
+              <b>{{ playerInMatch.match_player.id! === selectedPlayer?.match_player?.id ? 'SELECTED' : '' }} &nbsp;</b>
+              <b>{{ playerInMatch.match_player.match_number }}</b> &nbsp;
+              {{ playerInMatch.person?.second_name | titlecase }}
+              {{ playerInMatch.person?.first_name | titlecase }}
+            </button>
+          }
+        </tui-data-list>
+      </tui-select>
+    </div>
   } @else {
     <tui-select
       [formControl]="control"
