--- a/src/app/shared/scoreboards/football-start-roster-display/football-start-roster-display.html
+++ b/src/app/shared/scoreboards/football-start-roster-display/football-start-roster-display.html
@@ -1,5 +1,5 @@
 @if (side === "offense") {
-  <div class="start-offense-roster-display">
+  <div class="start-offense-roster-display" [style.background-color]="hexToRgba(scoreboardTeamColor, 0.3)">
     <div class="start-offense-roster-display-header">
       @if (team) {
         <tui-avatar
