--- a/src/app/shared/scoreboards/football-start-roster-display/football-start-roster-display.less
+++ b/src/app/shared/scoreboards/football-start-roster-display/football-start-roster-display.less
@@ -11,7 +11,7 @@
   margin: 10px;
   margin-top: 20px;
   border-radius: 20px;
-  background-color: rgba(158, 190, 158, 0.8);
+  //background-color: rgba(158, 190, 158, 0.8);
 }
 
 .start-offense-roster-display-header {
