team roster background color refactor

--- a/src/app/shared/scoreboards/football-start-roster-display/football-start-roster-display.less
+++ b/src/app/shared/scoreboards/football-start-roster-display/football-start-roster-display.less
@@ -5,7 +5,7 @@
   grid-template-rows: 100px auto auto auto;
   justify-content: space-evenly;
   align-items: start;
-  color: #393939;
+  color: #232323;
   // color: black;
   padding: 20px;
   margin: 10px;
@@ -18,9 +18,11 @@
   font-family: "Noto Sans Black", monospace;
   display: flex; /* Use flex to layout children */
   align-items: center; /* Vertically center items */
-  padding: 10px 0; /* Add some top and bottom padding for breathing room */
+  padding: 10px;
   font-size: 4rem; /* Adjust font size for visibility */
   border-bottom: 2px solid #ccc; /* A bottom border to separate from content */
+  background-color: #f0f0f0;
+  border-radius: 20px;
 }
 
 .team-logo {
